tests/parser/stmt_parser/snapshots/kasl__tests__parser__stmt_parser__var_parser__parse_const_with_type.snap
---
source: src/tests/parser/stmt_parser/var_parser.rs
expression: parsed
---
[
    ParserDeclStmt {
        range: Range {
            start: 0,
            end: 19,
        },
        kind: GlobalConst {
            name: "factor",
            value_type: Some(
                SymbolPath {
                    components: [
                        SymbolPathComponent {
                            symbol: "Int",
                        },
                    ],
                },
            ),
            def_val: [
                ExprToken {
                    range: Range {
                        start: 18,
                        end: 19,
                    },
                    kind: IntLiteral(
                        0,
                    ),
                },
            ],
        },
    },
]
